# luban

./: .gitattributes  .gitignore  404.html  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CNAME  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  bootstrap-dev.cmd  contributing.html  daily-loop.html  index.html  install.html  install.ps1  install.sh  license.html  print.html  quickstart.html  searchindex.js  searchindex.json
.github/workflows/: build.yml  docs.yml
api/: add_8cpp.html  add_8cpp.js  add_8cpp_source.html  annotated.html  annotated_dup.js  archive_8cpp.html  archive_8cpp.js  archive_8cpp_source.html  archive_8hpp.html  archive_8hpp.js  archive_8hpp_source.html  build__project_8cpp.html  build__project_8cpp.js  build__project_8cpp_source.html  classes.html  classluban_1_1scoop__manifest_1_1IncompleteManifest.html  classluban_1_1scoop__manifest_1_1UnsafeManifest.html  cli_8cpp.html  cli_8cpp.js  cli_8cpp_source.html  cli_8hpp.html  cli_8hpp.js  cli_8hpp_source.html  completion_8cpp.html  completion_8cpp.js  completion_8cpp_source.html  component_8cpp.html  component_8cpp.js  component_8cpp_source.html  component_8hpp.html  component_8hpp.js  component_8hpp_source.html  describe_8cpp.html  describe_8cpp.js  describe_8cpp_source.html  dir_2e5b065e27f7d82661af80b691f2759f.html  dir_2e5b065e27f7d82661af80b691f2759f.js  dir_5e80d29b61c444378a543be4dd1414df.html  dir_5e80d29b61c444378a543be4dd1414df.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+311 more)
api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enums_1.js  enums_2.js  (+69 more)
architecture/: design.html  philosophy.html  roadmap.html  two-tier-deps.html  why-cmake-module.html
cmake/: embed_text.cmake  version.hpp.in
commands/: add.html  build.html  completion.html  describe.html  doc.html  doctor.html  env.html  new.html  overview.html  remove.html  run.html  search.html  self.html  setup.html  shim.html  specs.html  sync.html  target.html  which.html
docs/: DESIGN.md  Doxyfile  FUTURE.md  book.toml  doxygen-awesome-header.html
docs/ref/: profile.ps1  starship.toml
docs/specs/: README.md
docs/specs/architecture/: module-boundaries.md  overview.md  technology-stack.md
docs/specs/decisions/: ADR-0001-initial-architecture.md  ADR-0002-layered-strategy.md  ADR-0003-agents-md-contract.md  ADR-0004-doctest-vendor.md  ADR-0005-luban-registry.md  ADR-0006-posix-port.md
docs/specs/domain/: domain-model.md  event-model.md
docs/specs/engineering/: test-strategy.md  (+2 more)
docs/src/: SUMMARY.md  contributing.md  daily-loop.md  install.md  introduction.md  license.md  quickstart.md
docs/src-zh/: SUMMARY.md  daily-loop.md  english.md  install.md  introduction.md  quickstart.md
manifests_seed/: cmake.json  emscripten.json  llvm-mingw.json  mingit.json  node.json  selection.json  vcpkg.json
reference/: env-vars.html  luban-cmake.html  luban-toml.html  manifest-overlay.html  paths.html  vcpkg-json.html
scripts/: activate-toolchain.ps1  bootstrap-toolchain.ps1  smoke.bat  smoke.sh
src/: applied_db.cpp  applied_db.hpp  archive.cpp  archive.hpp  blueprint.hpp  blueprint_apply.cpp  blueprint_apply.hpp  blueprint_lock.cpp  blueprint_lock.hpp  blueprint_lua.cpp  blueprint_lua.hpp  blueprint_reconcile.cpp  blueprint_reconcile.hpp  blueprint_toml.cpp  blueprint_toml.hpp  bucket_sync.cpp  bucket_sync.hpp  cli.cpp  cli.hpp  component.cpp  component.hpp  config_renderer.cpp  config_renderer.hpp  curl_subprocess.cpp  curl_subprocess.hpp  describe_state.cpp  describe_state.hpp  download.cpp  download.hpp  env_snapshot.cpp  env_snapshot.hpp  external_skip.cpp  external_skip.hpp  file_deploy.cpp  file_deploy.hpp  file_util.cpp  file_util.hpp  generation.cpp  generation.hpp  hash.cpp  (+73 more)
src/commands/: add.cpp  blueprint.cpp  bp_source.cpp  bp_source.hpp  build_project.cpp  check.cpp  clean.cpp  completion.cpp  describe.cpp  doc.cpp  doctor.cpp  env.cpp  fmt.cpp  migrate.cpp  msvc.cpp  new_project.cpp  outdated.cpp  self.cpp  self_cmd.cpp  setup.cpp  shim_cmd.cpp  specs.cpp  target.cpp  test_cmd.cpp  tree.cpp  update.cpp  which_search.cpp
src/shim_exe/: main.cpp
src/util/: win.hpp
templates/: Doxyfile.tmpl
templates/app/: .gitignore.tmpl  CMakeLists.txt.tmpl  CMakePresets.json.tmpl  luban.cmake.tmpl  vcpkg.json.tmpl
templates/configs/: bat.lua  delta.lua  fastfetch.lua  git.lua  yazi.lua
templates/help/: new.md
templates/programs/: fastfetch.lua
templates/specs/: AGENTS.md.tmpl  CLAUDE.md.tmpl  README.md.tmpl
templates/wasm-app/: .clang-tidy  .gitignore.tmpl  CMakePresets.json.tmpl  luban.cmake.tmpl
tests/: test_apply_stubs.cpp  test_archive.cpp  test_blueprint_apply_dryrun.cpp  test_blueprint_lock.cpp  test_blueprint_lua.cpp  test_blueprint_reconcile.cpp  test_blueprint_toml.cpp  test_config_renderer.cpp  test_describe.cpp  test_env_user.cpp  test_external_skip.cpp  test_file_deploy.cpp  test_file_util.cpp  test_generation.cpp  test_hash.cpp  test_lib_targets.cpp  test_lua_engine.cpp  test_lua_json.cpp  test_lua_register.cpp  test_luban_cmake_gen.cpp  test_luban_toml.cpp  test_main.cpp  test_marker_block.cpp  test_path_search.cpp  test_paths.cpp  test_program_renderer.cpp  test_qjs_engine.cpp  test_scoop_manifest.cpp  test_selection.cpp  test_self_uninstall_dryrun.cpp  test_source_resolver.cpp  test_store.cpp  test_trust_model.cpp  test_vcpkg_manifest.cpp
tmp-test/: luban.cmake  luban.toml
workflows/: add-vcpkg-dep.html  first-run.html  ide-integration.html  multi-target.html  reproduce.html  wasm.html
zh/: 404.html  daily-loop.html  english.html  install.html  introduction.html  print.html  quickstart.html  searchindex.js  searchindex.json
zh/architecture/: design.html
zh/commands/: overview.html
(+52 files in other folders)
